fix: Change class selector to  header-logo

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -113,10 +113,12 @@ svg {
   color: black;
 }
 
-.logo{
+.header-logo{
   height: var(--size-300); 
 }
 
-/* Section Styles */
+/* Footer Styles */
+
+
 
 
