--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -174,6 +174,10 @@ a{
   gap: clamp(var(--size-250), 5vh, var(--size-300));
 }
 
+.first-section > p{
+  padding-bottom: var(--size-900);
+}
+
 /* Utility Classes */
 
 .padding-block-100{
