fix: Change class name to suit location

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -203,7 +203,7 @@ body{
   height: auto;
 }
 
-.cta-newsletter{
+.cta-footer-newsletter{
   display: flex;
   align-items: center;
   justify-content: flex-start;
