--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -433,6 +433,36 @@ main .container{
   opacity: 1;
 }
 
+/* Carousel */
+
+.carousel_wrapper{
+  width: 90%;
+}
+
+.carousel_items{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.carousel_wrapper[data-animated="true"]{
+  overflow: hidden;
+  mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+  -webkit-mask: linear-gradient(90deg, transparent, white 10%, white 90%, transparent);
+}
+
+@keyframes scroll{
+  to {
+    transform: translate(calc(-50% - 0.5rem));
+  }
+}
+
+.carousel_wrapper[data-animated="true"] .carousel_items{
+  width: max-content;
+  flex-wrap: nowrap;
+  animation: scroll 60s forwards linear infinite;
+}
+
 
 /* Utility Classes */
 
